--- a/common/ld2450-base.yaml
+++ b/common/ld2450-base.yaml
@@ -33,6 +33,14 @@ globals:
     type: int
     initial_value: "1"
     restore_value: False
+  - id: entities_update_count
+    type: unsigned int
+    restore_value: False
+    initial_value: '0'
+  - id: entities_update_max_count
+    type: unsigned int
+    restore_value: False
+    initial_value: '0'
 
 
 interval:
@@ -676,6 +684,36 @@ select:
     on_value:
       then:
         - lambda: id(mmwave_update_interval) = (i * 100) + 50;
+  - platform: template
+    name: "Extra entities update"
+    icon: 'mdi:update'
+    optimistic: true
+    restore_value: true
+    entity_category: config
+    options:
+      - Every update
+      - Every 2 updates
+      - Every 3 updates
+      - Every 5 updates
+      - Every 10 updates
+      - Every 20 updates
+    initial_option: Every update
+    on_value:
+      then:
+        - lambda: |-
+            switch (i) {
+              case 3:
+                id(entities_update_max_count) = 5;
+                break;
+              case 4:
+                id(entities_update_max_count) = 10;
+                break;
+              case 5:
+                id(entities_update_max_count) = 20;
+                break;
+              default:
+                id(entities_update_max_count) = i + 1;
+            }
 
 uart:
   id: uart_bus
@@ -709,6 +747,12 @@ uart:
           if (bytes.size() != 30) {
             ESP_LOGW("LD2450", "Expected 30 bytes but received %hu!", bytes.size());
             return;
+          }
+
+          id(entities_update_count) += 1;
+          bool update_entities = id(entities_update_count) >= id(entities_update_max_count);
+          if (update_entities) {
+            id(entities_update_count) = 0;
           }
 
           const static float RADIANS_TO_DEGREES = 180.0 / 3.14159265358979323846;
@@ -797,53 +841,56 @@ uart:
                   zone4_count++;
                 }
               }
-              //Update entities
-              if (id(target1_x).state != p1_x) {
-                id(target1_x).publish_state(p1_x);
-              }
-              if (id(target1_y).state != p1_y) {
-                id(target1_y).publish_state(p1_y);
-              }
-              int16_t p1_speed = *((int16_t *)(&bytes[8]));
-              if (p1_speed < 0) p1_speed += MIN_INT16_VAL;
-              else p1_speed = -p1_speed;
-              float p1_speed_float = p1_speed / 100.0;
-              if (id(target1_speed).state != p1_speed_float) {
-                id(target1_speed).publish_state(p1_speed_float);
-              }
-              uint16_t p1_resolution = *((uint16_t *)(&bytes[10]));
-              if (id(target1_resolution).state != p1_resolution) {
-                id(target1_resolution).publish_state(p1_resolution);
-              }
-              if (id(target1_distance).state != p1_distance) {
-                id(target1_distance).publish_state(p1_distance);
-              }
-              p1_angle = (p1_angle * RADIANS_TO_DEGREES) - 90;
-              if (id(target1_angle).state != p1_angle) {
-                id(target1_angle).publish_state(p1_angle);
+              if (update_entities) {
+                if (id(target1_x).state != p1_x) {
+                  id(target1_x).publish_state(p1_x);
+                }
+                if (id(target1_y).state != p1_y) {
+                  id(target1_y).publish_state(p1_y);
+                }
+                int16_t p1_speed = *((int16_t *)(&bytes[8]));
+                if (p1_speed < 0) p1_speed += MIN_INT16_VAL;
+                else p1_speed = -p1_speed;
+                float p1_speed_float = p1_speed / 100.0;
+                if (id(target1_speed).state != p1_speed_float) {
+                  id(target1_speed).publish_state(p1_speed_float);
+                }
+                uint16_t p1_resolution = *((uint16_t *)(&bytes[10]));
+                if (id(target1_resolution).state != p1_resolution) {
+                  id(target1_resolution).publish_state(p1_resolution);
+                }
+                if (id(target1_distance).state != p1_distance) {
+                  id(target1_distance).publish_state(p1_distance);
+                }
+                p1_angle = (p1_angle * RADIANS_TO_DEGREES) - 90;
+                if (id(target1_angle).state != p1_angle) {
+                  id(target1_angle).publish_state(p1_angle);
+                }
               }
               id(target1_active).publish_state(true);
             }
           }
 
           if (!p1_detected && !target_masked) {
-            if (id(target1_x).state != 0) {
-              id(target1_x).publish_state(0);
-            }
-            if (id(target1_y).state != 0) {
-              id(target1_y).publish_state(0);
-            }
-            if (id(target1_speed).state != 0) {
-              id(target1_speed).publish_state(0);
-            }
-            if (id(target1_resolution).state != 0) {
-              id(target1_resolution).publish_state(0);
-            }
-            if (id(target1_distance).state != 0) {
-              id(target1_distance).publish_state(0);
-            }
-            if (id(target1_angle).state != 0) {
-              id(target1_angle).publish_state(0);
+            if (update_entities) {
+              if (id(target1_x).state != 0) {
+                id(target1_x).publish_state(0);
+              }
+              if (id(target1_y).state != 0) {
+                id(target1_y).publish_state(0);
+              }
+              if (id(target1_speed).state != 0) {
+                id(target1_speed).publish_state(0);
+              }
+              if (id(target1_resolution).state != 0) {
+                id(target1_resolution).publish_state(0);
+              }
+              if (id(target1_distance).state != 0) {
+                id(target1_distance).publish_state(0);
+              }
+              if (id(target1_angle).state != 0) {
+                id(target1_angle).publish_state(0);
+              }
             }
             id(target1_active).publish_state(false);
           }
@@ -893,53 +940,56 @@ uart:
                   zone4_count++;
                 }
               }
-              //Update entities
-              if (id(target2_x).state != p2_x) {
-                id(target2_x).publish_state(p2_x);
-              }
-              if (id(target2_y).state != p2_y) {
-                id(target2_y).publish_state(p2_y);
-              }
-              int16_t p2_speed = *((int16_t *)(&bytes[16]));
-              if (p2_speed < 0) p2_speed += MIN_INT16_VAL;
-              else p2_speed = -p2_speed;
-              float p2_speed_float = p2_speed / 100.0;
-              if (id(target2_speed).state != p2_speed_float) {
-                id(target2_speed).publish_state(p2_speed_float);
-              }
-              uint16_t p2_resolution = *((uint16_t *)(&bytes[18]));
-              if (id(target2_resolution).state != p2_resolution) {
-                id(target2_resolution).publish_state(p2_resolution);
-              }
-              if (id(target2_distance).state != p2_distance) {
-                id(target2_distance).publish_state(p2_distance);
-              }
-              p2_angle = (p2_angle * RADIANS_TO_DEGREES) - 90;
-              if (id(target2_angle).state != p2_angle) {
-                id(target2_angle).publish_state(p2_angle);
+              if (update_entities) {
+                if (id(target2_x).state != p2_x) {
+                  id(target2_x).publish_state(p2_x);
+                }
+                if (id(target2_y).state != p2_y) {
+                  id(target2_y).publish_state(p2_y);
+                }
+                int16_t p2_speed = *((int16_t *)(&bytes[16]));
+                if (p2_speed < 0) p2_speed += MIN_INT16_VAL;
+                else p2_speed = -p2_speed;
+                float p2_speed_float = p2_speed / 100.0;
+                if (id(target2_speed).state != p2_speed_float) {
+                  id(target2_speed).publish_state(p2_speed_float);
+                }
+                uint16_t p2_resolution = *((uint16_t *)(&bytes[18]));
+                if (id(target2_resolution).state != p2_resolution) {
+                  id(target2_resolution).publish_state(p2_resolution);
+                }
+                if (id(target2_distance).state != p2_distance) {
+                  id(target2_distance).publish_state(p2_distance);
+                }
+                p2_angle = (p2_angle * RADIANS_TO_DEGREES) - 90;
+                if (id(target2_angle).state != p2_angle) {
+                  id(target2_angle).publish_state(p2_angle);
+                }
               }
               id(target2_active).publish_state(true);
             }
           }
 
           if (!p2_detected && !target_masked) {
-            if (id(target2_x).state != 0) {
-              id(target2_x).publish_state(0);
-            }
-            if (id(target2_y).state != 0) {
-              id(target2_y).publish_state(0);
-            }
-            if (id(target2_speed).state != 0) {
-              id(target2_speed).publish_state(0);
-            }
-            if (id(target2_resolution).state != 0) {
-              id(target2_resolution).publish_state(0);
-            }
-            if (id(target2_distance).state != 0) {
-              id(target2_distance).publish_state(0);
-            }
-            if (id(target2_angle).state != 0) {
-              id(target2_angle).publish_state(0);
+            if (update_entities) {
+              if (id(target2_x).state != 0) {
+                id(target2_x).publish_state(0);
+              }
+              if (id(target2_y).state != 0) {
+                id(target2_y).publish_state(0);
+              }
+              if (id(target2_speed).state != 0) {
+                id(target2_speed).publish_state(0);
+              }
+              if (id(target2_resolution).state != 0) {
+                id(target2_resolution).publish_state(0);
+              }
+              if (id(target2_distance).state != 0) {
+                id(target2_distance).publish_state(0);
+              }
+              if (id(target2_angle).state != 0) {
+                id(target2_angle).publish_state(0);
+              }
             }
             id(target2_active).publish_state(false);
           }
@@ -989,71 +1039,76 @@ uart:
                   zone4_count++;
                 }
               }
-              //Update entities
-              if (id(target3_x).state != p3_x) {
-                id(target3_x).publish_state(p3_x);
-              }
-              if (id(target3_y).state != p3_y) {
-                id(target3_y).publish_state(p3_y);
-              }
-              int16_t p3_speed = *((int16_t *)(&bytes[24]));
-              if (p3_speed < 0) p3_speed += MIN_INT16_VAL;
-              else p3_speed = -p3_speed;
-              float p3_speed_float = p3_speed / 100.0;
-              if (id(target3_speed).state != p3_speed_float) {
-                id(target3_speed).publish_state(p3_speed_float);
-              }
-              uint16_t p3_resolution = *((uint16_t *)(&bytes[26]));
-              if (id(target3_resolution).state != p3_resolution) {
-                id(target3_resolution).publish_state(p3_resolution);
-              }
-              if (id(target3_distance).state != p3_distance) {
-                id(target3_distance).publish_state(p3_distance);
-              }
-              p3_angle = (p3_angle * RADIANS_TO_DEGREES) - 90;
-              if (id(target3_angle).state != p3_angle) {
-                id(target3_angle).publish_state(p3_angle);
+              if (update_entities) {
+                if (id(target3_x).state != p3_x) {
+                  id(target3_x).publish_state(p3_x);
+                }
+                if (id(target3_y).state != p3_y) {
+                  id(target3_y).publish_state(p3_y);
+                }
+                int16_t p3_speed = *((int16_t *)(&bytes[24]));
+                if (p3_speed < 0) p3_speed += MIN_INT16_VAL;
+                else p3_speed = -p3_speed;
+                float p3_speed_float = p3_speed / 100.0;
+                if (id(target3_speed).state != p3_speed_float) {
+                  id(target3_speed).publish_state(p3_speed_float);
+                }
+                uint16_t p3_resolution = *((uint16_t *)(&bytes[26]));
+                if (id(target3_resolution).state != p3_resolution) {
+                  id(target3_resolution).publish_state(p3_resolution);
+                }
+                if (id(target3_distance).state != p3_distance) {
+                  id(target3_distance).publish_state(p3_distance);
+                }
+                p3_angle = (p3_angle * RADIANS_TO_DEGREES) - 90;
+                if (id(target3_angle).state != p3_angle) {
+                  id(target3_angle).publish_state(p3_angle);
+                }
               }
               id(target3_active).publish_state(true);
             }
           }
 
           if (!p3_detected && !target_masked) {
-            if (id(target3_x).state != 0) {
-              id(target3_x).publish_state(0);
-            }
-            if (id(target3_y).state != 0) {
-              id(target3_y).publish_state(0);
-            }
-            if (id(target3_speed).state != 0) {
-              id(target3_speed).publish_state(0);
-            }
-            if (id(target3_resolution).state != 0) {
-              id(target3_resolution).publish_state(0);
-            }
-            if (id(target3_distance).state != 0) {
-              id(target3_distance).publish_state(0);
-            }
-            if (id(target3_angle).state != 0) {
-              id(target3_angle).publish_state(0);
+            if (update_entities) {
+              if (id(target3_x).state != 0) {
+                id(target3_x).publish_state(0);
+              }
+              if (id(target3_y).state != 0) {
+                id(target3_y).publish_state(0);
+              }
+              if (id(target3_speed).state != 0) {
+                id(target3_speed).publish_state(0);
+              }
+              if (id(target3_resolution).state != 0) {
+                id(target3_resolution).publish_state(0);
+              }
+              if (id(target3_distance).state != 0) {
+                id(target3_distance).publish_state(0);
+              }
+              if (id(target3_angle).state != 0) {
+                id(target3_angle).publish_state(0);
+              }
             }
             id(target3_active).publish_state(false);
           }
 
-          if (id(zone1_target_count).state != zone1_count) {
-            id(zone1_target_count).publish_state(zone1_count);
-          }
-          if (id(zone2_target_count).state != zone2_count) {
-            id(zone2_target_count).publish_state(zone2_count);
-          }
-          if (id(zone3_target_count).state != zone3_count) {
-            id(zone3_target_count).publish_state(zone3_count);
-          }
-          if (id(zone4_target_count).state != zone4_count) {
-            id(zone4_target_count).publish_state(zone4_count);
-          }
-          if (id(occupancy_mask_1_target_count).state != occupancy_mask_1_count) {
-            id(occupancy_mask_1_target_count).publish_state(occupancy_mask_1_count);
+          if (update_entities) {
+            if (id(zone1_target_count).state != zone1_count) {
+              id(zone1_target_count).publish_state(zone1_count);
+            }
+            if (id(zone2_target_count).state != zone2_count) {
+              id(zone2_target_count).publish_state(zone2_count);
+            }
+            if (id(zone3_target_count).state != zone3_count) {
+              id(zone3_target_count).publish_state(zone3_count);
+            }
+            if (id(zone4_target_count).state != zone4_count) {
+              id(zone4_target_count).publish_state(zone4_count);
+            }
+            if (id(occupancy_mask_1_target_count).state != occupancy_mask_1_count) {
+              id(occupancy_mask_1_target_count).publish_state(occupancy_mask_1_count);
+            }
           }
 
           id(occupancy).publish_state(p1_detected || p2_detected || p3_detected);
